ifitscool/comingsoon/static/comingsoon/css/comingsoon.css
body {
  background-color: #000;
  background-image: url('../img/pexels-photo-104952.jpeg');
  background-repeat: no-repeat;
  background-position:center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.container {
  text-align: center;
  height: 100%;
}

.banner {
  max-width: 850px;
  margin: auto;
  background: rgba(0,0,0,0.5);
  height: 100%;
}

.main-img {
  width: 250px;
  height: 250px;
  border: 1px solid #888;
  margin: 10px;
}

.coming-soon {
  font-size: 4em;
  font-family: 'Julius Sans One', sans-serif;
  padding: 8 0;
  margin: 0;
  font-weight: bold;
  color: #fff;
  /*text-shadow: -0.6px 0 #888, 0 0.6px #888, 0.6px 0 #888, 0 -0.6px #888;*/
}

#mc_embed_signup{
  clear: left;
  font-size: 1.4em;
  font-family: 'Julius Sans One', sans-serif;
  /*text-shadow: -0.6px 0 #888, 0 0.6px #888, 0.6px 0 #888, 0 -0.6px #888;*/
  width: 100%;
  color: #fff;
}

.social-media {
  overflow: auto;
  width: 160px;
  margin: 0 auto;
  padding: 0;
}

.social-media-li {
  list-style-type: none;
  float: left;
}

.social-media-icon {
  color: #fff;
  width: 40px;
  height: 40px;
  font-size: 2em;
}

.social-media-icon:hover {
  opacity: .7;
}

